--- a/stanislav-tasks/pom.xml
+++ b/stanislav-tasks/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>CSV_ObjectCreate</module>
         <module>FileCopyIO</module>
+        <module>JDBC</module>
     </modules>
 
 
