--- a/stanislav-tasks/coffee-machine/pom.xml
+++ b/stanislav-tasks/coffee-machine/pom.xml
@@ -12,4 +12,27 @@
     <artifactId>coffee-machine</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.json.bind</groupId>
+            <artifactId>javax.json.bind-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <!--Eclipse Yasson is the official reference
+        implementation of JSON Binding API (JSR-367).-->
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>yasson</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+
+    </dependencies>
+
+
 </project>
